--- a/src/app/main/login/signup/signup.component.html
+++ b/src/app/main/login/signup/signup.component.html
@@ -1,1 +1,71 @@
-<p>signup works!</p>
+<section>
+    <div class="header-section">
+      <img class="logo" src="assets/img/join_logo.svg" alt="Logo" />
+    </div>
+  
+    <div class="signUp-section">
+      <h1>Sign up</h1>
+      <div class="border-blue"></div>
+      <form>
+        <div class="signUp-name">
+          <input
+            type="text"
+            id="signUp-name"
+            name="name"
+            placeholder="Name"
+            pattern="[a-zA-Z0-9._%+\-]+@[a-zA-Z0-9.\-]+\.[a-zA-Z]{2,}"
+          />
+          <img src="assets/img/icons/person.svg" />
+        </div>
+        <div class="signUp-email">
+          <input
+            type="text"
+            id="signUp-email"
+            name="email"
+            placeholder="Email"
+            pattern="[a-zA-Z0-9._%+\-]+@[a-zA-Z0-9.\-]+\.[a-zA-Z]{2,}"
+          />
+          <img src="assets/img/icons/mail.svg" />
+        </div>
+        <div class="signUp-password">
+          <input
+            type="text"
+            id="signUp-password"
+            name="password"
+            placeholder="Password"
+            pattern="^(?=.*[A-Z])(?=.*\d)(?=.*[^\w]).{8,20}$"
+          />
+          <img src="assets/img/icons/lock_icon.svg" />
+        </div>
+        <div class="confirm-password">
+          <input
+            type="text"
+            id="confirm-password"
+            name="confirm-password"
+            placeholder="confirm-Password"
+            pattern="^(?=.*[A-Z])(?=.*\d)(?=.*[^\w]).{8,20}$"
+          />
+          <img src="assets/img/icons/lock_icon.svg" />
+        </div>
+        <div class="btn-section">
+            <button class="btn_signUp">Sign up</button>
+        </div>
+      </form>
+    </div>
+  
+    <!--<div class="sign-up">
+      
+    </div> -->
+  
+    <div class="footer-section">
+      <a
+        [ngClass]="{ active: navigationService.selectedItem === 4 }"
+        (click)="selectItem(4)"
+        >Privacy Policy</a
+      >
+      <a 
+        [ngClass]="{ active: navigationService.selectedItem === 5 }"
+        (click)="selectItem(5)"
+        >Legal Notice</a>
+    </div>
+  </section>
