--- a/src/app/main/content/summary/summary.component.scss
+++ b/src/app/main/content/summary/summary.component.scss
@@ -12,7 +12,6 @@ section {
 .headline {
   @include dFlex($jc: space-between);
   padding-top: 80px;
-  padding-bottom: 30px;
   width: 625px;
   max-width: 650px;
   h1 {
@@ -23,9 +22,9 @@ section {
   }
 }
 
-.border-blue {  
+.border-blue {
   background-color: $light_blue;
-  width: 3px;  
+  width: 3px;
 }
 
 .vertical {
@@ -57,18 +56,26 @@ section {
   display: grid;
   grid-template-columns: repeat(6, 1fr);
   grid-template-rows: auto auto auto;
-  gap: 10px;
+  gap: 32px;
 }
 
 .box {
   background-color: $white;
   box-shadow: 0 0 4px 0px rgba($black, 0.1);
-  border-radius: 10px;
+  border-radius: 20px;
   @include dFlex();
   cursor: pointer;
+  box-shadow: 0 4px 4px 0 rgba($black, 0.25);
 
-  &:hover {
-    background-color: $dark_blue;
+  transition: transform 0.1s;
+}
+
+.box:hover {
+  background-color: $dark_blue;
+  color: $white;
+  transform: scale(1.03);
+
+  .among-each-other > span {
     color: $white;
   }
 }
@@ -76,36 +83,74 @@ section {
 .box:nth-child(1) {
   grid-column: 1 / span 3;
   grid-row: 1;
+  aspect-ratio: 1.57/1;
 }
 
 .box:nth-child(2) {
   grid-column: 4 / span 3;
   grid-row: 1;
+  aspect-ratio: 1.57/1;
 }
 
 .box:nth-child(3) {
   grid-column: 1 / span 6;
   grid-row: 2;
+  padding: 36px 0;
 }
 
 .box:nth-child(4) {
   grid-column: 1 / span 2;
   grid-row: 3;
+  aspect-ratio: 1/1;
 }
 
 .box:nth-child(5) {
   grid-column: 3 / span 2;
   grid-row: 3;
+  aspect-ratio: 1/1;
 }
 
 .box:nth-child(6) {
   grid-column: 5 / span 2;
   grid-row: 3;
+  aspect-ratio: 1/1;
 }
 
 .among-each-other {
   @include dFlex();
   flex-direction: column;
+
+  font-size: 64px;
+  font-weight: 600;
+
+  > span {
+    font-size: 20px;
+    color: $dark_blue;
+    font-weight: 400;
+    text-align: center;
+    max-width: 83px;
+  }
+}
+
+.right {
+  @include dFlex();
+  flex-direction: column;
+}
+
+.greeting {
+  color: $dark_blue;
+  font-size: 47px;
+  font-weight: 500;
+  text-align: center;
+}
+
+.greetingName {
+  color: $light_blue;
+  font-size: 64px;
+  font-weight: 700;
+  text-align: center;
+
+  max-width: 400px;
 }
 
 /*---------------------------------------------------------- MEDIA Mobile ---------------------------------------------------------- */
