--- a/src/app/main/login/login.component.html
+++ b/src/app/main/login/login.component.html
@@ -6,7 +6,7 @@
     alt="Logo"
   />
 
-  <div class="header-section"></div>
+  <!-- <div class="header-section"></div> -->
 
   <div class="login-section">
     <h1>Log in</h1>
