--- a/src/app/main/login/login.component.html
+++ b/src/app/main/login/login.component.html
@@ -42,6 +42,12 @@
           [ngClass]="{ d_none: !passwordFieldActive }"
           (click)="togglePasswordVisibility()"
         />
+        <img
+          class="visibility_off"
+          src="assets/img/icons/visibility_icon.svg"
+          [ngClass]="{ d_none: !passwordFieldActive }"
+          (click)="toggleVisibilityIcon()"
+        />
       </div>
       <div class="btn-section">
         <button class="btn-login">Log in</button>
