added login and sign up functions

--- a/src/app/main/content/summary/summary.component.html
+++ b/src/app/main/content/summary/summary.component.html
@@ -24,7 +24,10 @@
         <div class="among-each-other">
           {{ countUrgentTasks() }} <span>Urgent</span>
         </div>
-        <div>{{ getDeadlineDate() }} <span>Upcoming Deadline</span></div>
+        <div class="">
+          {{ dateDeadline | date : "EEEE, dd. MMM yyyy" }}
+          <span>Upcoming Deadline</span>
+        </div>
       </div>
       <div class="box" (click)="this.navigationService.setSelectedItem(2)">
         <div class="among-each-other">
