--- a/src/app/main/login/signup/signup.component.html
+++ b/src/app/main/login/signup/signup.component.html
@@ -53,6 +53,7 @@
       </div>
       <div class="btn-section">
         <button
+          class="btn-signUp"
           (click)="
             authService.signUp(
               emailSignUp.value,
@@ -60,7 +61,6 @@
               nameSignUp.value
             )
           "
-          class="btn_signUp"
         >
           Sign up
         </button>
