added: policy-checkbox-container signUp component

--- a/src/app/main/login/signup/signup.component.html
+++ b/src/app/main/login/signup/signup.component.html
@@ -51,6 +51,10 @@
         />
         <img src="assets/img/icons/lock_icon.svg" />
       </div>
+      <div class="policy-checkbox-container">
+        <input type="checkbox">
+        <p>I accept the <span class="join-aqua">Privacy policy</span></p>
+      </div>
       <div class="btn-section">
         <button
           class="btn-signUp"
