Cleanup and minor fixes: single-task and login component

--- a/src/app/main/content/contacts/overlay/overlay.component.html
+++ b/src/app/main/content/contacts/overlay/overlay.component.html
@@ -32,7 +32,8 @@
       <div
         class="initials"
         [ngStyle]="{
-          'background-color': contactService.selectedContact?.bgColor}"
+          'background-color': contactService.selectedContact?.bgColor
+        }"
       >
         {{ contactService.selectedContact?.initials }}
       </div>
