--- a/src/app/main/login/signup/signup.component.html
+++ b/src/app/main/login/signup/signup.component.html
@@ -4,6 +4,7 @@
   </div>
 
   <div class="signUp-section">
+    <a class="back-btn"></a>
     <h1>Sign up</h1>
     <div class="border-blue"></div>
     <form>
