--- a/src/app/main/login/login.component.scss
+++ b/src/app/main/login/login.component.scss
@@ -14,17 +14,20 @@ section {
 
   .animated-logo {
     position: absolute;
-    width: 10vh;
+    width: 100px;
+    height: 122px;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%) scale(3);
+    transform: translate(-50%, -50%);
     transition: all 1s ease-in-out;
     z-index: 100;
 
     &.logo-final-position {
-      top: 48px;
-      left: 48px;
-      transform: translate(0%, 0%) scale(1);
+      width: 64px;
+      height: 78px;
+      top: 36px;
+      left: 36px;
+      transform: translate(0%, 0%);
     }
   }
 }
@@ -182,6 +185,22 @@ section {
 }
 
 /*--------------------------------------------------   Desktop   --------------------------------------------------*/
+@media (min-width: 480px) {
+    .animated-logo {
+   
+      width: 274px !important;
+      height: 334px !important;
+     
+
+      &.logo-final-position {
+        width: 100px !important;
+        height: 122px !important;
+        top: 48px !important;
+        left: 48px !important;
+      }
+    }
+  }
+
 @media (min-width: 500px) {
   .login-section {
 
@@ -193,24 +212,6 @@ section {
 }
 
 @media (min-width: 1024px) {
-  section {
-    .animated-logo {
-      position: absolute;
-      width: 10vh;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%) scale(3);
-      transition: all 1s ease-in-out;
-      z-index: 100;
-
-      &.logo-final-position {
-        top: 48px;
-        left: 48px;
-        transform: translate(0%, 0%) scale(1);
-      }
-    }
-  }
-
   .sign-up {
     position: absolute;
     top: 48px;
