--- a/src/app/main/content/summary/summary.component.scss
+++ b/src/app/main/content/summary/summary.component.scss
@@ -76,8 +76,30 @@ section {
   color: $white;
   transform: scale(1.03);
 
-  .among-each-other > span {
+  .among-each-other > span,
+  .among-each-other-dealine > span {
     color: $white;
+  }
+
+  .dark-bg {
+    background-color: $white;
+  }
+
+  .pencil {
+    background: url("./../../../../assets/img/icons/pencil_icon.svg");
+  }
+
+  .checkmark {
+    background: url("./../../../../assets/img/icons/checkmark_dark.svg");
+    width: 30px;
+    height: 22px;
+  }
+
+  .checkmark,
+  .pencil {
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center center;
   }
 }
 
@@ -117,6 +139,50 @@ section {
   aspect-ratio: 1/1;
 }
 
+.circle {
+  width: 69px;
+  height: 69px;
+  border-radius: 50%;
+}
+
+.dark-bg {
+  background-color: $dark_blue;
+  @include dFlex();
+  margin-right: 16px;
+}
+
+.red-bg {
+  background-color: $special_red;
+  @include dFlex();
+  margin-right: 16px;
+}
+
+.arrow-up {
+  background: url("./../../../../assets/img/icons/arrow_up_white.svg");
+  width: 39px;
+  height: 29px;
+}
+
+.pencil {
+  background: url("./../../../../assets/img/icons/pencil_white.svg");
+  width: 32px;
+  height: 32px;
+}
+
+.checkmark {
+  background: url("./../../../../assets/img/icons/checkmark_white.svg");
+  width: 30px;
+  height: 22px;
+}
+
+.arrow-up,
+.pencil,
+.checkmark {
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+
 .among-each-other {
   @include dFlex();
   flex-direction: column;
@@ -133,6 +199,33 @@ section {
   }
 }
 
+.among-each-other-dealine {
+  @include dFlex($ai: flex-start);
+  flex-direction: column;
+  font-size: 21px;
+  font-weight: 700;
+  > span {
+    font-size: 16px;
+    color: $dark_blue;
+    font-weight: 400;
+    text-align: center;
+    max-width: 150px;
+  }
+}
+.urgent {
+  @include dFlex();
+}
+.border-grey {
+  background-color: $light_gray;
+  width: 2px;
+  border: none;
+  height: 10vh;
+}
+
+.middle {
+  justify-content: space-around;
+}
+
 .right {
   @include dFlex();
   flex-direction: column;
@@ -147,7 +240,7 @@ section {
 
 .greetingName {
   color: $light_blue;
-  font-size: 64px;
+  font-size: clamp(47px, 5vw, 64px);
   font-weight: 700;
   text-align: center;
 
