--- a/src/app/shared/footer/footer.component.scss
+++ b/src/app/shared/footer/footer.component.scss
@@ -76,6 +76,8 @@ nav {
   background-image: url("./../../../assets/img/icons/contacts.svg");
 }
 
+.login
+
 .notes {
   @include dFlex($ai: flex-start);
   flex-direction: column;
